fix errors found with sonarcube, add unit testing